--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://www.christopherturney.com/img/me.png">
 
-    <link rel="shortcut icon" type="image/x-icon" href="img/christopha246revwhiteimage.png" />
+    <link rel="shortcut icon" type="image/x-icon" href="img/C.png" />
 
 
     <!-- Bootstrap Core CSS -->
