--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Portfolio</a>
                     </li>
+                    <script type="text/javascript">
+                        // track click for link id #nav
+                        mixpanel.track_links('#portfolio', 'Portfolio Link Clicked');
+
+                    </script>
+
                     <li class="page-scroll">
                         <a href="#skills">Skills</a>
                     </li>
