--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
                     <li class="hidden">
                         <a href="#page-top"></a>
                     </li>
-                    <li class="page-scroll">
+                    <li class="page-scroll" id = "link_portfolio">
                         <a href="#portfolio">Portfolio</a>
                     </li>
-                    <!-- <script type="text/javascript">
+                    <script type="text/javascript">
                         // track click for link id #nav
-                        mixpanel.track_links('#portfolio', 'Portfolio Link Clicked');
+                        mixpanel.track_links('#link_portfolio', 'Portfolio Link Clicked');
 
-                    </script> -->
+                    </script>
 
                     <li class="page-scroll">
                         <a href="#skills">Skills</a>
