--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
 </head>
 
 <body id="page-top" class="index">
-   
-
-
-
- <!-- Navigation -->
+    <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -115,11 +111,11 @@
                     <div class="intro-text">
                         <span class="name">Christopher Turney</span>
                         <hr class="star-light">
-                        <h3 class="summary hidden"><span class= white-text-hover >Technology enthusiast with experience guiding product development & product implementation projects inside complex enterprise environments.</span><br /><br/> <br />
+                        <h3 class="summary "><span class= white-text-hover >Technology enthusiast with experience bringing software projects live inside complex enterprise environments.</span><br /><br/> <br />
                         <span class = white-text-hover >Seeking the opportunity to work with a team to design and build SaaS products.</span>
                         </h3>
 
-                        <h3 class = "summary"><span class= white-text-hover>I design and build products that make enterprises and users work better together.</span>
+                        <h3 class = "summary hidden"><span class= white-text-hover>I design and build products that make enterprises and users work better together.</span>
                         <br />
                         <br />
                         <span class= white-text-hover>I love working in fast-paced development environments tackling complex, technical challenges head-on.</span>
@@ -1106,13 +1102,14 @@
     <!-- Theme JavaScript -->
     <script src="js/freelancer.min.js"></script>
 
-    
+    <!-- Pie Chart -->
+    <!-- <script src="js/pie.js"></script> -->
 
 
     <!-- Timeline js -->
     <script src="js/main.js"></script> 
 
- 
+
 
 
 
