--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                     <div class="intro-text">
                         <span class="name">Christopher Turney</span>
                         <hr class="star-light">
-                        <h3 class="summary "><span class= white-text-hover >Technology enthusiast with experience bringing software projects live inside complex enterprise environments.</span><br /><br/> <br />
+                        <h3 class="summary "><span class= white-text-hover >Technology enthusiast with experience bringing software projects live inside complex enterprise environments.</span><br /> 
                         <span class = white-text-hover >Seeking the opportunity to work with a team to design and build SaaS products.</span>
                         </h3>
 
