--- a/index.html
+++ b/index.html
@@ -472,15 +472,15 @@
                         <p>New York, NY</p>
                     </div>
                     <div class="footer-col col-md-3">
-                        <h3>Contact</h3>
+                        <h3>Email</h3>
                         <p>christopher.p.turney@gmail.com</p>
                     </div>
                     <div class="footer-col col-md-3">
                         <h3>Resume</h3>
-                        <p><a href="/files/Christopher Turney_resume_July_24_2016.pdf">Download</a></p>
+                        <p><a href="/files/Christopher Turney_resume.pdf">Download</a></p>
                     </div>
                     <div class="footer-col col-md-3">
-                        <h3>Around the Web</h3>
+                        <h3>Social</h3>
                         <ul class="list-inline">
                            <!--  <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
